# GDExtension-Games

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat
cmake/: GitVersionInfo.cmake
demo/: OneFilePong.tscn  coin.tscn  default_env.tres  hud.tscn  player.tscn  powerup.tscn  project.godot
demo/textures/: bg.png.import  cactus.png.import  coin_gold.png.import  grass.png.import
demo/textures/audio/: Coin.wav.import  EndSound.wav.import  Hit.wav.import  Level.wav.import  Powerup.wav.import
demo/textures/coin/: coin-frame-1.png.import  coin-frame-10.png.import  coin-frame-11.png.import  coin-frame-2.png.import  coin-frame-3.png.import  coin-frame-4.png.import  coin-frame-5.png.import  coin-frame-6.png.import  coin-frame-7.png.import  coin-frame-8.png.import  coin-frame-9.png.import
demo/textures/player/: p1_duck.png.import  p1_front.png.import  p1_hurt.png.import  p1_jump.png.import  p1_stand.png.import  player_sheet.png.import
demo/textures/pow/: pow-frame-1.png.import  pow-frame-10.png.import  pow-frame-2.png.import  pow-frame-3.png.import  pow-frame-4.png.import  (+5 more)
src/: CMakeLists.txt  CoinDashGame.cpp  CoinDashGame.h  PongGame.cpp  PongGame.h  RegisterExtension.cpp  SignalSystem.h
src/api/: RegisterExtension.cpp
src/classes/: CMakeLists.txt
src/classes/include/: Coin.hpp  CoinDashGame.h  HUD.hpp  Include.hpp  Player.hpp  Powerup.hpp  assert.hpp
src/classes/src/: CMakeLists.txt  Coin.cpp  CoinDashGame.cpp  HUD.cpp  Player.cpp  Powerup.cpp
templates/: template.debug.gdextension.in  template.release.gdextension.in
(+11 files in other folders)
